# process-engineering-suite

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPING.md  Dockerfile  GEMINI.md  README.md  TODO.md  package-lock.json  package.json  pes-web-dna.md  pse-web-dna.md  pyproject.toml  summary_table.csv  test_design_agents_api.py  test_integration.py  test_integration_complete.py  test_llm_messages.py  test_psv_fields.sh  tsconfig.json  turbo.json  vercel.json
services/calc-engine/: README.md  pyproject.toml
services/calc-engine/hydraulics/: pyproject.toml
services/calc-engine/hydraulics/config/: fittings_skeleton.yaml  gas_network.yaml  network-2.yaml  network_branch_loop.yaml  sample_network_skeleton.xml  test_k_safety_factor.yaml
services/calc-engine/hydraulics/docs/: architecture.md  configuration_reference.md  react_app_design.md  system_diagrams.md  user_manual.md  verification.md
services/calc-engine/hydraulics/hydraulics/: single_edge.py
services/calc-engine/hydraulics/tests/: test_skeleton.py
services/calc-engine/pes_calc/heat_transfer/: __init__.py
services/calc-engine/pes_calc/vessels/: __init__.py  horizontal_conical_vessel.py  horizontal_elliptical_vessel.py  horizontal_flat_vessel.py  horizontal_hemispherical_vessel.py  horizontal_integration.py  horizontal_torispherical_vessel.py  integration.py  spherical_tank.py  types.py  vertical_conical_tank.py  vertical_conical_vessel.py  vertical_elliptical_tank.py  vertical_elliptical_vessel.py  vertical_flat_tank.py  vertical_flat_vessel.py  vertical_hemispherical_tank.py  vertical_hemispherical_vessel.py  (+3 more)
(+1136 files in other folders)
